# MaiganApp

./: build.gradle  gradle.properties  local.properties  settings.gradle
blelib/: CMakeLists.txt  build.gradle  proguard-rules.pro
blelib/src/androidTest/java/com/mgtech/blelib/: ApplicationTest.java
blelib/src/main/: AndroidManifest.xml
blelib/src/main/cpp/: ecg.cpp
blelib/src/main/cpp/ecg/: bluestein_setup.h  detect_ecg.cpp  detect_ecg.h  diff.cpp  diff.h  ecg_emxutil.cpp  ecg_rtwutil.cpp  fft.cpp  filter.cpp  filter_ecg.h  findpeaks.cpp  ifft.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  rtwtypes.h  sort1.h  sortIdx.cpp
blelib/src/main/java/com/mgtech/blelib/biz/: AbstractBleResponseCallback.java  AsyncBleCenter.java  BleCenter.java  BleCore.java  BleOrder.java  BleRequest.java  BleResponse.java  BleSender.java  BleState.java  BluetoothConfig.java  BluetoothModel.java  BluetoothOrderBytes.java  BluetoothOrderBytesVersion420.java  BluetoothOrderBytesVersion421.java  BluetoothResponseBytes.java  IBizController.java  IBraceletInfoManager.java  IOrderBytes.java  IResponseBytes.java  RandomCodeGenerator.java
blelib/src/main/java/com/mgtech/blelib/constant/: BleConstant.java  BleStatusConstant.java
blelib/src/main/java/com/mgtech/blelib/core/: BleClient.java  BleClient2.java  BleClientCallback.java  BleClientCallback2.java  BleCoreConstant.java  BleDeviceService.java  ClsUtils.java  ParsedAd.java  ParsedBleBroadcast.java
blelib/src/main/java/com/mgtech/blelib/ecg/: EcgUtil.java
blelib/src/main/java/com/mgtech/blelib/entity/: AlertReminder.java  AutoMeasurePeriodData.java  BleStateEvent.java  BluetoothOrder.java  BroadcastData.java  CheckDeviceData.java  CurrentStepData.java  DisplayPage.java  FirmStateData.java  FirmwareInfoData.java  FirmwareUpgradeData.java  GetSystemParamResponse.java  HeightWeightData.java  ISystemParam.java  LinkStatusEvent.java  LookBandData.java  LookForBraceletEvent.java  (+27 more)
blelib/src/test/java/com/mgtech/blelib/: ExampleUnitTest.java
(+1113 files in other folders)
